--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,12 @@ find_package(catkin REQUIRED COMPONENTS
 add_action_files(
    DIRECTORY
    action
+   FILES ObjDetInterface.action
 )
 
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
-    DEPENDENCIES actionlib_msgs
+    DEPENDENCIES actionlib_msgs std_msgs
  )
 
 ################################################
@@ -55,7 +56,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+#  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -73,25 +74,25 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 
-# add_executable(...)
+add_executable(${PROJECT_NAME}_interface src/interface.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(${PROJECT_NAME}_interface PROPERTIES OUTPUT_NAME objdet_interface PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 
-# add_dependencies(... ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_interface ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
  
 ## Specify libraries to link a library or executable target against
 
  
-# target_link_libraries(...
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(${PROJECT_NAME}_interface
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
