--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,17 +79,20 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 ## The recommended prefix ensures that target names across packages don't collide
 
 add_executable(${PROJECT_NAME}_interface src/objdet_interface.cpp)
+add_executable(${PROJECT_NAME}_enumeration src/enumeration.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
 set_target_properties(${PROJECT_NAME}_interface PROPERTIES OUTPUT_NAME objdet_interface PREFIX "")
+set_target_properties(${PROJECT_NAME}_enumeration PROPERTIES OUTPUT_NAME objdet_enumeration PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 
 add_dependencies(${PROJECT_NAME}_interface ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_enumeration ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
  
 ## Specify libraries to link a library or executable target against
 
@@ -97,8 +100,13 @@ add_dependencies(${PROJECT_NAME}_interface ${${PROJECT_NAME}_EXPORTED_TARGETS} $
 target_link_libraries(${PROJECT_NAME}_interface
   ${catkin_LIBRARIES}
 )
- 
 target_link_libraries(${PROJECT_NAME}_interface
+  ${PROJECT_NAME}
+)
+target_link_libraries(${PROJECT_NAME}_enumeration
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(${PROJECT_NAME}_enumeration
   ${PROJECT_NAME}
 )
 
