--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
     <build_export_depend>roscpp</build_export_depend>
     <build_export_depend>rospy</build_export_depend>
     <build_export_depend>actionlib</build_export_depend>
-    <build_export_depend>message_generation</build_export_depend>
+    <!--build_export_depend>message_generation</build_export_depend-->
     <build_export_depend>message_runtime</build_export_depend>
     <exec_depend>roscpp</exec_depend>
     <exec_depend>rospy</exec_depend>
