--- a/package.xml
+++ b/package.xml
@@ -27,6 +27,7 @@
     <exec_depend>message_runtime</exec_depend>
     <depend>std_msgs</depend>
     <depend>actionlib_msgs</depend>
+    <depend>geometry_msgs</depend>
 
     <export>
 
